manifests/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations: {}
spec:
  parentRefs:
    - name: cilium-gateway-internal
      namespace: kube-system
      sectionName: https-longhorn-k8s-home-lex-la
  hostnames:
    - longhorn.k8s.home.lex.la
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
